Filter Adjustments - fixes T103
Summary:
* app wide filter adjustments
	* role-filter
	* message-filter

* removes block-grid

* wraps clickable `<li>` in `<a>` tags.

* removes message-filter `fa-icons`
	* they were making the responsive layouts tight
	* needed the extra space
	* not essential

* fixes indentation

Test Plan:
* hover and click user roles
	* message filter should work the same once wired up
* resize screen for responsive views

Reviewers: shadowhand, rjmackay

Reviewed By: shadowhand, rjmackay

Subscribers: dkobia, eyedol

Maniphest Tasks: T103

Differential Revision: https://phabricator.ushahidi.com/D73

--- a/modules/UshahidiUI/media/scss/modules/workspace/incoming-messages/messages/modules/_message-filter.scss
+++ b/modules/UshahidiUI/media/scss/modules/workspace/incoming-messages/messages/modules/_message-filter.scss
@@ -13,9 +13,12 @@
 \*------------------------------------*/
 
 .filter-categories-list--message {
-  li {
-    color: $body-font-color;
-  }
+	a {
+		width: 25%;
+	}
+	li {
+		color: $body-font-color;
+	}
 }
 
 
@@ -28,11 +31,7 @@
 .search-field-wrapper--filter--message  {
 	@extend %search-field-wrapper--filter;
 	@include grid-column(12);
-	padding: 0 20px;
-	border-top: 1px solid $secondary-color;
 	@media #{$small} {
 		@include grid-column(3, $float: right);
-		border-top: none;
-		margin: 17px 0 0 0;
 	}
 }
